[package]
name = "rustache_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.73"
clap = { version = "3.2.20", features = ["derive"] }
pelite = "0.9.1"
widestring = "1.0.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
]
